src/Components/TestimonialsSection/TestimonialsSection.scss
.testimonials-section {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  height: 190vh;
  width: 100vw;

  .heading {
    display: flex;
    flex-direction: column;
    width: 70%;
    text-align: center;
    height: 500px;
  }

  .slider {
    padding: 40rem 0;
    height: 450px;
    display: flex;
    position: absolute;
    left: 0;
    margin-top: 25px;

    .testimonial-container {
      width: 100vw;
      display: flex;
      align-items: center;
      justify-content: center;
      position: relative;
      margin-top: 35.8rem;

      .testimonial {
        display: grid;
        grid-template-columns: 0.55fr 0.45fr;
        gap: 8.8rem;
        color: var(--white);
        width: 90vw;
        height: 85rem;
        border: 8px solid var(--bg-lightest);
        border-right: none;
        border-top: none;
        position: relative;
        padding-top: 50px;

        .border {
          position: absolute;
          background: var(--bg-lightest);
          left: 0;
          top: 0;
          width: 55%;
          height: 8px;
        }

        .text-side {
          height: 100%;
          display: flex;
          align-items: center;
          flex-direction: column;
          gap: 12rem;
          width: 66.5rem;
          position: relative;

          .quote {
            width: 90%;
            height: 80%;
            display: flex;
            flex-direction: column;
            padding-left: 20px;

            .testimonial-author {
              font-size: 4rem;
              font-weight: 700;
            }
            .underline {
              height: 0;
              border-top: 4px solid var(--white);
              margin-top: 2.4rem;
              margin-bottom: 6.4rem;
            }
            .testimonial-text {
              font-size: 2rem;
              line-height: 150%;
              text-align: left;
              z-index: 1;
            }
          }
          .slide-controls {
            display: flex;
            justify-content: space-evenly;
            align-items: center;
            gap: 0.4rem;
            position: absolute;
            bottom: 0;
            left: 0;
            padding: 20px;
            width: 20vw;

            .slidenumber {
              display: flex;
              justify-content: space-between;
              align-items: center;
              gap: 0.8rem;
              margin-top: -1.2rem;

              .current-pg,
              .total-pgs {
                font-size: 3.3rem;
              }
            }
            svg {
              width: 5.6em;
              height: 5.6em;
              fill: var(--bg-lightest);
            }
          }
        }
      }

      .img-side {
        height: 90%;
        width: 76%;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        position: absolute;
        right: 0;

        img {
          display: block;
          height: 100%;
        }
      }
    }
  }
}

.fill {
  fill: var(--white) !important;
}

/* Media Queries */

@media (max-width: 399px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          .text-side {
            width: 98%;
            padding-left: 30px;
          }
        }
      }
    }
  }
}

@media (min-width: 400px) and (max-width: 599px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          .text-side {
            width: 90%;
            padding-left: 56px;
          }
        }
      }
    }
  }
}

@media (max-width: 599px) {
  .testimonials-section {
    height: 450px;
    .slider {
      padding: 128px 0;
      height: fit-content;
      .testimonial-container {
        margin-top: 0;
        .testimonial {
          border: none;
          display: block;
          max-width: unset;
          width: 100vw;
          padding-top: 24px;
          .border {
            display: none;
          }
          .text-side {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            justify-content: space-between;
            gap: 40px;
            height: fit-content;
            .quote {
              width: 100%;
              .testimonial-text {
                width: 90%;
                font-size: 12px;
                line-height: 20px;
              }
            }
            .slide-controls {
              position: unset;
              width: 70%;
              display: flex;
              justify-content: flex-start;
              align-items: center;

              svg {
                width: 20px;
                height: 20px;
              }

              .slidenumber {
                margin-top: -4px;
                gap: 2px;
              }
            }
          }
        }

        .img-side {
          display: none;
          img {
            display: none;
          }
        }
      }
    }
  }
}

@media (min-width: 1800px) and (max-width: 2599px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 80vw;
        }
      }
    }
  }
}

@media (min-width: 1800px) and (max-width: 4999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          .text-side {
            .slide-controls {
              width: 15vw;
            }
          }
        }
      }
    }
  }
}

@media (min-width: 2600px) and (max-width: 2999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 70vw;
        }
      }
    }
  }
}

@media (min-width: 3000px) and (max-width: 4999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          padding-top: 88px;
        }
      }
    }
  }
}

@media (min-width: 3500px) and (max-width: 3999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 75vw;
        }
      }
    }
  }
}

@media (min-width: 5000px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          padding-top: 108px;
          .text-side {
            .slide-controls {
              width: 12vw;
            }
          }
        }
      }
    }
  }
}

@media (min-width: 5000px) and (max-width: 5999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 75vw;
        }
      }
    }
  }
}

@media (min-width: 6000px) and (max-width: 6999px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 70vw;
        }
      }
    }
  }
}

@media (min-width: 7000px) and (max-width: 8499px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 60vw;
        }
      }
    }
  }
}

@media (min-width: 8500px) {
  .testimonials-section {
    .slider {
      .testimonial-container {
        .testimonial {
          width: 50vw;
        }
      }
    }
  }
}

